refactor crabby code

--- a/Getting data and setting up environment.ipynb
+++ b/Getting data and setting up environment.ipynb
@@ -312,6 +312,142 @@
    "source": [
     "df[:6]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# saving the new sentences\n",
+    "df.to_csv('one_desc.txt', index=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loading tokenizer\n",
+    "#!python -m spacy download en"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Building test examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds = {\n",
+    "    \"image\": ['dog.jpg', \"child.jpg\", \"bus.png\", \"boat.png\", \"horse.png\"],\n",
+    "    \"description\": [\"Dog on a beach by the ocean\", \"Child holding red frisbee outdoors\", \n",
+    "                   \"Bus driving by parked cars\", \"A small boat in the ocean\", \"A cowboy riding a horse in the desert\"]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame.from_dict(ds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>image</th>\n",
+       "      <th>description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>dog.jpg</td>\n",
+       "      <td>Dog on a beach by the ocean</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>child.jpg</td>\n",
+       "      <td>Child holding red frisbee outdoors</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>bus.png</td>\n",
+       "      <td>Bus driving by parked cars</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>boat.png</td>\n",
+       "      <td>A small boat in the ocean</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>horse.png</td>\n",
+       "      <td>A cowboy riding a horse in the desert</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       image                            description\n",
+       "0    dog.jpg            Dog on a beach by the ocean\n",
+       "1  child.jpg     Child holding red frisbee outdoors\n",
+       "2    bus.png             Bus driving by parked cars\n",
+       "3   boat.png              A small boat in the ocean\n",
+       "4  horse.png  A cowboy riding a horse in the desert"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('test.csv', index=0)"
+   ]
   }
  ],
  "metadata": {
