--- a/Getting data and setting up environment.ipynb
+++ b/Getting data and setting up environment.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install ipywidgets"
+    "# !pip install ipywidgets"
    ]
   },
   {
@@ -24,7 +24,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cbd233256eb04d3b9df07aaa20d1cc51",
+       "model_id": "9533cf82bdfd42969883049f1c779d15",
        "version_major": 2,
        "version_minor": 0
       },
@@ -44,11 +44,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!mkdir /root/.kaggle/\n",
+    "!mkdir /root/.kaggle/\n",
     "with open('/root/.kaggle/kaggle.json', 'wb') as file:\n",
     "    file.write(uploader.value['kaggle.json']['content'])"
    ]
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -71,8 +71,8 @@
      "text": [
       "Warning: Your Kaggle API key is readable by other users on this system! To fix this, you can run 'chmod 600 /root/.kaggle/kaggle.json'\n",
       "Downloading flickr8k.zip to /notebooks/Image-Captioning\n",
-      "100%|█████████████████████████████████████▉| 1.04G/1.04G [00:32<00:00, 37.5MB/s]\n",
-      "100%|██████████████████████████████████████| 1.04G/1.04G [00:32<00:00, 34.0MB/s]\n"
+      "100%|█████████████████████████████████████▉| 1.04G/1.04G [00:31<00:00, 57.7MB/s]\n",
+      "100%|██████████████████████████████████████| 1.04G/1.04G [00:31<00:00, 35.5MB/s]\n"
      ]
     }
    ],
@@ -83,9 +83,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "replace captions.txt? [y]es, [n]o, [A]ll, [N]one, [r]ename: ^C\n"
+     ]
+    }
+   ],
    "source": [
     "#unzip the data\n",
     "!unzip -q flickr8k.zip"
@@ -93,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +208,7 @@
        "6  A black dog and a tri-colored dog playing with...  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +312,7 @@
        "25                    A child playing on a rope net .  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +439,7 @@
        "4  horse.png  A cowboy riding a horse in the desert"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
