GRU decompression working !!

--- a/Using GRU.ipynb
+++ b/Using GRU.ipynb
@@ -414,7 +414,7 @@
     "enc = EncoderCNN(HID_DIM, DROPOUT)\n",
     "dec = DecoderRNN(EMB_DIM, HID_DIM, VOCAB_LENGTH, DROPOUT)\n",
     "\n",
-    "model = Img2Seq(enc, dec, device)"
+    "model = Img2Seq(enc, dec, device).to(device)"
    ]
   },
   {
@@ -594,7 +594,7 @@
     }
    ],
    "source": [
-    "outputs = model(xb, yb)\n",
+    "outputs = model(xb.to(device), yb.to(device))\n",
     "outputs.shape"
    ]
   },
@@ -624,6 +624,10 @@
     "    ):\n",
     "        \n",
     "        optimizer.zero_grad()\n",
+    "        \n",
+    "        imgs = imgs.to(model.device)\n",
+    "        captions = captions.to(model.device)\n",
+    "        \n",
     "        output = model(imgs, captions)\n",
     "        \n",
     "        #output = [trg len, batch size, output dim]\n",
@@ -635,7 +639,6 @@
     "        #trg = [(trg len -1) * batch size]\n",
     "        #output = [(trg len -1) * batch size, output dim]\n",
     "        \n",
-    "        print(type(trg))\n",
     "        \n",
     "        loss = criterion(output, trg)\n",
     "        loss.backward()\n",
@@ -745,10 +748,11 @@
     }
    ],
    "source": [
-    "N_EPOCHS = 100\n",
+    "import math\n",
+    "N_EPOCHS = 1\n",
     "CLIP = 1\n",
     "\n",
-    "best_valid_loss = float('inf')\n",
+    "best_train_loss = float('inf')\n",
     "\n",
     "for epoch in range(N_EPOCHS):\n",
     "    \n",
@@ -761,13 +765,13 @@
     "    \n",
     "    epoch_mins, epoch_secs = epoch_time(start_time, end_time)\n",
     "    \n",
-    "    if valid_loss < best_valid_loss:\n",
-    "        best_valid_loss = valid_loss\n",
-    "        torch.save(model.state_dict(), 'tut2-model.pt')\n",
+    "    if train_loss < best_train_loss:\n",
+    "        best_train_loss = train_loss\n",
+    "        torch.save(model.state_dict(), 'GRU-model.pt')\n",
     "    \n",
     "    print(f'Epoch: {epoch+1:02} | Time: {epoch_mins}m {epoch_secs}s')\n",
     "    print(f'\\tTrain Loss: {train_loss:.3f} | Train PPL: {math.exp(train_loss):7.3f}')\n",
-    "    print(f'\\t Val. Loss: {valid_loss:.3f} |  Val. PPL: {math.exp(valid_loss):7.3f}')"
+    "    #print(f'\\t Val. Loss: {valid_loss:.3f} |  Val. PPL: {math.exp(valid_loss):7.3f}')"
    ]
   }
  ],
@@ -787,7 +791,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
