--- a/BLEU.ipynb
+++ b/BLEU.ipynb
@@ -774,67 +774,86 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### BLEU Score "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from torchtext.data.metrics import bleu_score\n",
+    "\n",
+    "def calculate_bleu(test_dict, imgs_path, model, max_len=50, n_images=100):\n",
+    "    \n",
+    "    trgs = []\n",
+    "    pred_trgs = []\n",
+    "    \n",
+    "    i = 0\n",
+    "    \n",
+    "    for filename in test_dict:\n",
+    "        if i == n_images:break\n",
+    "        \n",
+    "        # getting the test image\n",
+    "        img = Image.open(imgs_path+'/'+filename).convert(\"RGB\")\n",
+    "        img = transform(img).unsqueeze(0) # making it into a batch\n",
+    "        \n",
+    "        # making prediction\n",
+    "        pred = caption_image(img, model)\n",
+    "        \n",
+    "\n",
+    "        pred_trgs.append(pred[:-1])\n",
+    "        trgs.append(test_dict[filename])\n",
+    "        \n",
+    "        i+=1\n",
+    "        \n",
+    "    return bleu_score(pred_trgs, trgs)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calculate_bleu(test_dict, \"Images\", model, n_images=10)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# getting test data\n",
+    "df = pd.read_csv('data.csv')\n",
+    "test_df = df[df['split'] == 'test']\n",
+    "\n",
+    "img_ids = test_df.file_name.unique()\n",
+    "\n",
+    "test_dict = {}\n",
+    "for img_id in img_ids:\n",
+    "    list_tokens = []\n",
+    "    for sent in test_df[test_df['file_name'] == img_id]['caption'].values:\n",
+    "        list_tokens.append(Vocabulary.tokenize_en(sent))\n",
+    "    \n",
+    "    test_dict[img_id] = list_tokens"
+   ]
   }
  ],
  "metadata": {
