--- a/LSTM FT BLEU.ipynb
+++ b/LSTM FT BLEU.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,104 +15,55 @@
     "\n",
     "\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import spacy\n",
+    "\n",
+    "from datasets import build_vocab\n",
+    "from models import Img2Seq, EncoderCNN, DecoderLSTM\n",
+    "from utils import print_examples, predict_test, print_scores, get_test_data\n",
     "\n",
     "from PIL import Image\n",
     "from tqdm import tqdm\n",
     "import matplotlib.pyplot as plt\n",
-    "import time, math\n",
+    "import time, math, random\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "spacy_en = spacy.load('en')\n",
-    "model_path = 'models/splits.pth'\n",
-    "images_path = 'flickr/Images/'\n",
-    "df_path = 'data.csv'\n",
-    "test_df_path = 'test.csv'\n",
-    "test_examples_path = 'test_examples/'"
+    "# making our results reproducable\n",
+    "SEED = 42\n",
+    "random.seed(SEED)\n",
+    "np.random.seed(SEED)\n",
+    "torch.manual_seed(SEED)\n",
+    "torch.cuda.manual_seed(SEED)\n",
+    "torch.backends.cudnn.deterministic = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Vocabulary:\n",
-    "    def __init__(self, freq_threshold=2):\n",
-    "        self.freq_threshold = freq_threshold\n",
-    "        self.itos = {0:\"<pad>\", 1:\"<sos>\", 2:\"<eos>\", 3:\"<unk>\"}\n",
-    "        self.stoi = {\"<pad>\":0, \"<sos>\":1, \"<eos>\":2, \"<unk>\":3}\n",
-    "        \n",
-    "    def __len__(self):\n",
-    "        return len(self.itos)\n",
-    "    \n",
-    "    @staticmethod\n",
-    "    def tokenize_en(text):\n",
-    "        return [tok.text for tok in spacy_en.tokenizer(text.lower())]\n",
-    "    \n",
-    "    def build_vocabulary(self, sentence_list):\n",
-    "        freqs = {}\n",
-    "        idx = 4\n",
-    "        \n",
-    "        for sentence in sentence_list:\n",
-    "            for word in self.tokenize_en(sentence):\n",
-    "                if word not in freqs:\n",
-    "                    freqs[word] = 1\n",
-    "                else:\n",
-    "                    freqs[word] += 1\n",
-    "\n",
-    "                if freqs[word] == self.freq_threshold:\n",
-    "                    self.stoi[word] = idx\n",
-    "                    self.itos[idx] = word\n",
-    "                    idx += 1\n",
-    "\n",
-    "    def numericalize(self, text):\n",
-    "        tokenized_text = self.tokenize_en(text)\n",
-    "        \n",
-    "        return [self.stoi[token] if token in self.stoi else self.stoi[\"<unk>\"]\n",
-    "               for token in tokenized_text]\n",
-    "                "
+    "MODEL_PATH = 'models/LSTM_FT.pth'\n",
+    "IMAGES_PATH = 'flickr/Images/'\n",
+    "DF_PATH = 'data.csv'\n",
+    "TEST_DF_PATH = 'test.csv'\n",
+    "TEST_EXAMPLES_PATH = 'test_examples/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def build_vocab(data_file, freq_threshold=2 ,split='train'):\n",
-    "    df = pd.read_csv(data_file)\n",
-    "    df = df[df['split'] == split]\n",
-    "    captions = df.caption.values\n",
-    "    \n",
-    "    vocab = Vocabulary(freq_threshold)\n",
-    "    vocab.build_vocabulary(captions)\n",
-    "    \n",
-    "    return vocab"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vocab = build_vocab(df_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "vocab = build_vocab(DF_PATH)\n",
     "pad_idx = vocab.stoi['<pad>']"
    ]
   },
@@ -125,66 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# encoder CNN\n",
-    "class EncoderCNN(nn.Module):\n",
-    "    def __init__(self, hid_dim, dropout, train_cnn=False):\n",
-    "        super().__init__()\n",
-    "        \n",
-    "        self.hid_dim = hid_dim\n",
-    "        self.train_cnn = train_cnn\n",
-    "        \n",
-    "        self.inception = models.inception_v3(pretrained=True, aux_logits=False)\n",
-    "        self.inception.fc = nn.Linear(self.inception.fc.in_features, hid_dim)\n",
-    "        self.relu = nn.ReLU()\n",
-    "        self.dropout = nn.Dropout(dropout)\n",
-    "        \n",
-    "    def forward(self, images):\n",
-    "        features = self.dropout(self.relu(self.inception(images)))\n",
-    "        return features\n",
-    "    \n",
-    "\n",
-    "# decoder RNN\n",
-    "class DecoderRNN(nn.Module):\n",
-    "    def __init__(self, emb_dim, hid_dim, vocab_size, dropout):\n",
-    "        super().__init__()\n",
-    "        \n",
-    "        self.hid_dim = hid_dim\n",
-    "        self.embedding = nn.Embedding(vocab_size, emb_dim)\n",
-    "        self.rnn = nn.LSTM(emb_dim, hid_dim)\n",
-    "        self.linear = nn.Linear(hid_dim, vocab_size)\n",
-    "        self.dropout = nn.Dropout(dropout)\n",
-    "        \n",
-    "    def forward(self, features, captions):\n",
-    "        embeddings = self.dropout(self.embedding(captions))\n",
-    "        embeddings = torch.cat((features.unsqueeze(0), embeddings), dim=0)\n",
-    "        rnn_out, _ = self.rnn(embeddings)\n",
-    "        outputs = self.linear(rnn_out)\n",
-    "        return outputs\n",
-    "\n",
-    "    \n",
-    "class Img2Seq(nn.Module):\n",
-    "    def __init__(self, encoder, decoder, device):\n",
-    "        super().__init__()\n",
-    "        \n",
-    "        self.encoder = encoder\n",
-    "        self.decoder = decoder\n",
-    "        self.device = device\n",
-    "        \n",
-    "        assert self.encoder.hid_dim == self.decoder.hid_dim\n",
-    "        \n",
-    "    def forward(self, images, captions):\n",
-    "        features = self.encoder(images)\n",
-    "        outputs = self.decoder(features, captions)\n",
-    "        return outputs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,20 +85,20 @@
     "DROPOUT = .5\n",
     "VOCAB_LENGTH = len(vocab)\n",
     "TRAIN_CNN = False\n",
-    "bs = 64\n",
+    "bs = 256\n",
     "lr = 3e-3\n",
     "\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "\n",
     "encoder = EncoderCNN(HID_DIM, DROPOUT)\n",
-    "decoder = DecoderRNN(EMB_DIM, HID_DIM, VOCAB_LENGTH, DROPOUT)\n",
+    "decoder = DecoderLSTM(EMB_DIM, HID_DIM, VOCAB_LENGTH, DROPOUT)\n",
     "\n",
     "model = Img2Seq(encoder, decoder, device).to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +107,7 @@
        "device(type='cuda')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +142,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,62 +150,12 @@
    "source": [
     "# load model\n",
     "model = Img2Seq(encoder, decoder, device).to(device)\n",
-    "model.load_state_dict(torch.load(model_path))"
+    "model.load_state_dict(torch.load(MODEL_PATH))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def caption_image(image, model, max_len=50):\n",
-    "    \n",
-    "    model.eval()\n",
-    "    result_caption = []\n",
-    "    \n",
-    "    with torch.no_grad():\n",
-    "        context = model.encoder(image.to(model.device)).unsqueeze(0)\n",
-    "        #hidden = torch.tensor(vocab.stoi[\"<sos>\"]).unsqueeze(0).to(model.device)\n",
-    "        states=None\n",
-    "        \n",
-    "        for t in range(1, max_len):\n",
-    "            output, states = model.decoder.rnn(context, states)\n",
-    "            output = model.decoder.linear(output.squeeze(0))\n",
-    "            top1 = output.argmax(1)\n",
-    "            context = model.decoder.embedding(top1).unsqueeze(0)\n",
-    "            \n",
-    "            result_caption.append(top1.item())\n",
-    "            if vocab.itos[top1.item()] == '<eos>':\n",
-    "                break\n",
-    "    return [vocab.itos[idx] for idx in result_caption]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def print_examples(model, csv_name, root_dir='test_examples'):\n",
-    "    df = pd.read_csv(csv_name)\n",
-    "    imgs = df['image'].tolist()\n",
-    "    captions = df['description'].tolist()\n",
-    "    i = 1\n",
-    "    for img_id, cap in zip(imgs, captions):\n",
-    "        img = Image.open(root_dir+img_id).convert(\"RGB\")\n",
-    "        plt.imshow(img)\n",
-    "        plt.title(f'Example {i} Correct: {cap}')\n",
-    "        plt.axis('off')\n",
-    "        img = transform(img).unsqueeze(0)\n",
-    "        print(f\"Output: {' '.join(caption_image(img, model)[1:-1])}\")\n",
-    "        plt.show()\n",
-    "        i+=1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -413,71 +255,12 @@
     }
    ],
    "source": [
-    "print_examples(model, csv_name=test_df_path, root_dir=test_examples_path)"
+    "print_examples(model, TEST_DF_PATH, vocab, TEST_EXAMPLES_PATH)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from torchtext.data.metrics import bleu_score\n",
-    "\n",
-    "def predict_test(test_dict, imgs_path, model, max_len=50, n_images=100):\n",
-    "    \n",
-    "    trgs = []\n",
-    "    pred_trgs = []\n",
-    "    \n",
-    "    i = 0\n",
-    "    \n",
-    "    for filename in test_dict:\n",
-    "        if i == n_images:break\n",
-    "        \n",
-    "        # getting the test image\n",
-    "        img = Image.open(imgs_path+'/'+filename).convert(\"RGB\")\n",
-    "        img = transform(img).unsqueeze(0) # making it into a batch\n",
-    "        \n",
-    "        # making prediction\n",
-    "        pred = caption_image(img, model)\n",
-    "        \n",
-    "        if i % (n_images//10) == 0 and i!=0:\n",
-    "            print(\"prediction:\", ' '.join(x for x in pred[1:-1]))\n",
-    "            print(\"actaul 1:\", ' '.join(x for x in test_dict[filename][0]))\n",
-    "            \n",
-    "        \n",
-    "        pred_trgs.append(pred[:-1])\n",
-    "        trgs.append(test_dict[filename])\n",
-    "        \n",
-    "        i+=1\n",
-    "        \n",
-    "    return pred_trgs, trgs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# getting test data\n",
-    "df = pd.read_csv(df_path)\n",
-    "test_df = df[df['split'] == 'test']\n",
-    "\n",
-    "img_ids = test_df.file_name.unique()\n",
-    "\n",
-    "test_dict = {}\n",
-    "for img_id in img_ids:\n",
-    "    list_tokens = []\n",
-    "    for sent in test_df[test_df['file_name'] == img_id]['caption'].values:\n",
-    "        list_tokens.append(Vocabulary.tokenize_en(sent))\n",
-    "    \n",
-    "    test_dict[img_id] = list_tokens"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -506,45 +289,14 @@
     }
    ],
    "source": [
-    "preds, trgs = predict_test(test_dict, images_path, model, n_images=1000)"
+    "test_dict = get_test_data(DF_PATH)\n",
+    "\n",
+    "preds, trgs = predict_test(test_dict, IMAGES_PATH, model, vocab, n_images=1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1000, (1000, 5))"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(preds), (len(trgs), len(trgs[0]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def print_scores(preds, trgs):\n",
-    "    print(\"1:\", bleu_score(preds, trgs, max_n=1, weights=[1])*100)\n",
-    "    print(\"2:\", bleu_score(preds, trgs, max_n=2, weights=[.5, .5])*100)\n",
-    "    print(\"3:\", bleu_score(preds, trgs, max_n=3, weights=[.33, .33, .33])*100)\n",
-    "    print(\"4:\", bleu_score(preds, trgs)*100)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
